--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic todo app</title>
 </head>
 <body>
-    
+    <header>
+        <h1>WELCOME TO YOUR BASIC TODO APP</h1>
+    </header>
+    <section class="btnSection">
+        <button id="btnAdd">ADD</button>
+        <button id="btnView">VIEW</button>
+    </section>
+    <section id="displayContainer">
+        <p id="display"></p>
+    </section>
 </body>
 </html>
