worked on the backend of the application logic and the dom logic too

--- a/src/template.html
+++ b/src/template.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic todo app</title>
+    <title>BASIC TODO</title>
 </head>
 <body>
-    <header>
-        <h1>WELCOME TO YOUR BASIC TODO APP</h1>
-    </header>
-    <section class="btnSection">
-        <button id="btnAdd">ADD</button>
-        <button id="btnView">VIEW</button>
-    </section>
-    <section id="displayContainer">
-        <p id="display"></p>
-    </section>
+<header>
+    <h1>WELCOME TO YOUR BASIC TODO APP</h1>
+</header>
+
+<section class="sectionBtn">
+            <button id="add">ADD</button>
+            <button id="view">VIEW</button>
+</section>
+
+    <main>
+        <div id="mainContainer">
+        </div>
+    </main>
+    <aside>
+        <nav id="formContainer">
+             <form action="#">
+            <legend>Fill in the space of your TODO </legend>
+            <div class="one">
+             <label for="title">TITLE </label>
+            <input type="text" name="title" id="title">
+            </div>
+
+            <div class="two">
+                <label for="details">DETAILS</label>
+                <textarea name="details" id="details" cols="5px"></textarea>
+            </div>
+            <button type="submit" id="submit">Submit</button>
+        </form>
+        </nav>
+       
+    </aside>
 </body>
 </html>
