worked on the user interface and styled some of the elements

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,7 @@
 
             <div class="two">
                 <label for="details">DETAILS</label>
-                <textarea name="details" id="details" cols="5px"></textarea>
+                <textarea name="details" id="details" cols="15px" rows="1"></textarea>
             </div>
             <button type="submit" id="submit">Submit</button>
         </form>
